refactor CSS into global.css

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <link rel="icon" href="media/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="style/global.css">
   <link rel="stylesheet" type="text/css" href="style/about.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -129,69 +130,81 @@
     </div>
 </div>
 
-
-
 <footer>
-    <div class="row footer">
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
-        <div class="row pl-4">
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-            <p>Find Us</p>
-            <br/>
-            <p class="font-weight-light">101 Kensington Steet, Monteral, Canada.</p>
-          </div>
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-              <p class="font-weight-light">Support</p>
-              <p class="font-weight-light">Careers</p>
-              <p class="font-weight-light">About</p>
-          </div>
-          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+  <div class="row footer">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
+      <div class="row pl-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+          <p>Find Us</p>
+          <br/>
+          <p class="font-weight-light">101 Kensington Steet, Monteral, Canada.</p>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+          <a href="">
+            <p class="font-weight-light">Support</p>
+          </a>
+          <a href="">
+            <p class="font-weight-light">Careers</p>
+          </a>
+          <a href="">
+            <p class="font-weight-light">About</p>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+            <a href="">
               <p class="font-weight-light">Press</p>
+            </a>
+            <a href="">
               <p class="font-weight-light">Investor</p>
-          </div>
+            </a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-5">
-        <div class="row text-center justify-content-center">
-            <form>
-              <div class="form-group form-inline d-inline">
-                <p class="font-weight-light">Sign up for updates.</p>
-                <input type="email" class="form-control emailInput p-3" aria-describedby="email" placeholder="Email">
-                <button type="submit" class="emailButton btn btn-primary inline ml-2 mt-2 mb-2 p-2 pl-4 pr-4">Sign up</button>
-              </div>
-            </form>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
-        <div class="row pl-5">
-          <div class="col-12 pl-0">
-            <p>Find us online</p>
-            <a class="footerLink" href="https://www.twitch.tv/avaer"><i class="fab fa-twitch pt-2 pb-2 pr-2"></i></a>
-            <a class="footerLink" href="https://discordapp.com/invite/Apk6cZN"><i class="fab fa-discord p-2"></i></a>
-            <a class="footerLink" href="https://exokit.slack.com/join/shared_invite/enQtNDI3NjcxNzYwMDIxLWU2NmFmOTEzMzk4NWNiYjRhMjVkYzcyNjg5YjUyMzZkYWM1ZGI4M2IwYWZiMjNlMTJjMDlkM2U3Y2JiNTc2M2Q"><i class="fab fa-slack p-2"></i></a>
-            <a class="footerLink" href="https://twitter.com/webmixedreality"><i class="fab fa-twitter p-2"></i></a>
-          </div>
-          <div class="col-12 pl-0">
-            <div class="row pt-5">
-              <div class="col-6 pl-0">
-                <p>Social</p>
-              </div>
-              <div class="col-6">
-                <p>Community</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 pt-4">
-          <div class="row">
-            <div class="col-12">
-                <p class="text-center font-weight-light">Copyright &copy; 2018 Exokit Inc.</p>
-            </div>
-          </div>
-        </div>
     </div>
-  </footer>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-5">
+      <div class="row text-center justify-content-center">
+          <form>
+            <div class="form-group form-inline d-inline">
+              <p class="font-weight-light">Sign up for updates.</p>
+              <input type="email" class="form-control emailInput p-3" aria-describedby="email" placeholder="Email">
+              <button type="submit" class="emailButton btn btn-primary inline ml-2 mt-2 mb-2 p-2 pl-4 pr-4">Sign up</button>
+            </div>
+          </form>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 pb-4">
+      <div class="row pl-5">
+        <div class="col-12 pl-0">
+          <p>Find us online</p>
+          <a class="footerLink" href="https://www.twitch.tv/avaer"><i class="fab fa-twitch pt-2 pb-2 pr-2"></i></a>
+          <a class="footerLink" href="https://discordapp.com/invite/Apk6cZN"><i class="fab fa-discord p-2"></i></a>
+          <a class="footerLink" href="https://exokit.slack.com/join/shared_invite/enQtNDI3NjcxNzYwMDIxLWU2NmFmOTEzMzk4NWNiYjRhMjVkYzcyNjg5YjUyMzZkYWM1ZGI4M2IwYWZiMjNlMTJjMDlkM2U3Y2JiNTc2M2Q"><i class="fab fa-slack p-2"></i></a>
+          <a class="footerLink" href="https://twitter.com/webmixedreality"><i class="fab fa-twitter p-2"></i></a>
+        </div>
+        <div class="col-12 pl-0">
+          <div class="row pt-5">
+            <div class="col-6 pl-0">
+              <a href="">
+                <p>Social</p>
+              </a>
+              </div>
+            <div class="col-6">
+              <a href="">
+                <p>Community</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 pt-4">
+        <div class="row">
+          <div class="col-12">
+              <p class="text-center font-weight-light">Copyright &copy; 2018 Exokit Inc.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+</footer>
 
 </body>
 </html>
