--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 </nav>
 </header>
 
-<div id="expandedLittleNavbar" style="position: fixed; top: 0; right: 0; left: 0; background-color: white; z-index: 3; visibility: hidden;">
+<div id="expandedLittleNavbar">
     <div class="row text-center mt-5">
     <div class="col-12 mt-5 mb-5">
         <img src="media/logo.svg" style="height: 7vh; width: auto;"></a>
