--- a/features.html
+++ b/features.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Exokit - Contact</title>
+  <title>Exokit - Features</title>
   <link rel="icon" href="media/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
