--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
-    <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4 active" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
 </div>
 
