--- a/features.html
+++ b/features.html
@@ -26,7 +26,7 @@
 <a class="navbar-brand" href="index.html"><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
 <div class="collapse navbar-collapse" id="bigNavbar">
     <div class="navbar-nav">
-    <a class="nav-item nav-link pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4 active" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
     <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
