polish about section

--- a/about.html
+++ b/about.html
@@ -72,10 +72,13 @@
 </div>
 
 <div class="row pt-5">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 p-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 pl-5 pt-2 pb-5">
         <h1>The Journey</h1>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 p-5">
+    <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 pl-5">
+      <img src="media/timeline.png" class="img-fluid timeline"></img>
+    </div>
+    <div class="col-lg-3 col-md-8 col-sm-12 col-xs-12 pr-5 milestones">
         <h1>2017</h1>
         <h2 class="font-weight-light">Exokit was born.</h2>
         <br><br><br>
@@ -85,8 +88,9 @@
         <h1>2018 Q4</h1>
         <h2 class="font-weight-light">Milestone 2.</h2>
         <br><br><br>
-        <h2 class="font-weight-light">The Road Ahead...</h1>
-    </div>
+        <h5>Join Us</h5>
+        <br>
+      </div>
 </div>
 
 <div class="row pt-5 theTeam">
@@ -95,37 +99,22 @@
             <h1>The Team</h1>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mt-2 mb-3">
-            <img class="teamPic mb-3" src="media/kylie.jpg">
-            <h3 class="text-left pl-5 pr-5">Adrian</h3>
-            <div class="text-left pl-5 pr-5 pt-3 pb-3">
+
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mt-2 mb-3 p-4">
+            <img class="teamPic mb-3 img-fluid" src="media/avaer.jpg">
+            <h3 class="text-left">Adrian</h3>
+            <div class="text-left pt-3 pb-3">
                 <i class="fab fa-linkedin fa-2x mr-2 ml-1"></i>
                 <i class="fab fa-twitter fa-2x mr-2 ml-1"></i>
                 <i class="fab fa-github fa-2x mr-2 ml-1"></i>
                 <i class="fab fa-twitch fa-2x mr-2 ml-1"></i>
             </div>
-            <p class="text-left pl-5 pr-5">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+            <p class="text-left">Adrian Biedrzycki is a Canada based Programmer who’s worked with Microsoft on the development of
+              the SQL language and the compliers used to develop other SQL apps, he’s also developed a major part of the webflow platform. He’s been programming since the age of 6 and has a Bachelor’s degree in Computer Science from the University of Waterloo.</p>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mt-2 mb-3">
-            <img class="teamPic mb-3" src="media/dude.jpg">
-            <h3 class="text-left pl-5 pr-5">Adrian</h3>
-            <div class="text-left pl-5 pr-5 pt-3 pb-3">
-                <i class="fab fa-linkedin fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-twitter fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-github fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-twitch fa-2x mr-2 ml-1"></i>
-            </div>
-            <p class="text-left pl-5 pr-5">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-        </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center mt-2 mb-3">
-            <img class="teamPic mb-3" src="media/obama.jpg">
-            <h3 class="text-left pl-5 pr-5">Adrian</h3>
-            <div class="text-left pl-5 pr-5 pt-3 pb-3">
-                <i class="fab fa-linkedin fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-twitter fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-github fa-2x mr-2 ml-1"></i>
-                <i class="fab fa-twitch fa-2x mr-2 ml-1"></i>
-            </div>
-            <p class="text-left pl-5 pr-5">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+
         </div>
     </div>
 </div>
