--- a/index.html
+++ b/index.html
@@ -198,18 +198,23 @@ function expandLittleNavbar() {
       <div class="featurePusher"></div>
       <div class="row pt-5">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-          <h2 class="featureText pb-4">Power up your WebXR app</h1>
-          <h5 class="featureText text-left font-weight-light p-3">Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
+          <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">Power up your WebXR app</h1>
+          <h5 class="featureText slideItem text-left font-weight-light p-3" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">
+            Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
           <div class="featureTextPusher "></div>
           <div class="featureTextPusher"></div>
           <div class="featureTextPusher "></div>
-          <h2 class="featureText pb-4">Run apps in Exokit</h1>
-          <h5 class="featureText text-left font-weight-light p-3">Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+          <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
+          <h5 class="featureText text-left font-weight-light p-3 slideItem"
+           data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">
+           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
           <div class="featureTextPusher "></div>
           <div class="featureTextPusher "></div>
           <div class="featureTextPusher "></div>
-          <h2 class="featureText pb-4">Ship your app</h1>
-            <h5 class="featureText text-left font-weight-light p-3">Get a package for Magic Leap World, Steam, and other app stores direct from URL or content Zip with Exoport.
+          <h2 class="featureText slideItem pb-4" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">Ship your app</h1>
+            <h5 class="featureText slideItem text-left font-weight-light p-3"
+             data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">
+             Get a package for Magic Leap World, Steam, and other app stores direct from URL or content Zip with Exoport.
             </h5>
           <div class="featureTextPusher "></div>
           <div class="featureTextPusher "></div>
@@ -217,28 +222,28 @@ function expandLittleNavbar() {
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pb-4">
-              <i class="featureMain fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
-              <h3 class="featureMain" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]">Javascript</h3>
+              <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
+              <h3 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 100, ev: 0, u: 'vw'}]">Javascript</h3>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pb-4">
-              <i class="featureMain fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
-              <h3 class="featureMain" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]">HTML</h3>
+              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
+              <h3 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 90, ev: 0, u: 'vw'}]">HTML</h3>
             </div>
           </div>
           
-          <div class="featureArrow featureMain" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></div>
-          <img class="exokitImg featureMain" src="media/logo-white.svg" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
-          <h3 class="featureMain exokitName" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]">Exokit</h3>
-          <div class="featureArrow featureMain" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></div>
+          <div class="featureArrow featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 300, ev: 0, u: 'vw'}]"></div>
+          <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
+          <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 90, ev: 0, u: 'vw'}]">Exokit</h3>
+          <div class="featureArrow featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 600, ev: 0, u: 'vw'}]"></div>
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="mlImg featureMain" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
+                <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 150, ev: 0, u: 'vw'}]"></img>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="viveImg featureMain" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
+                <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 100, ev: 0, u: 'vw'}]"></img>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="oculusImg featureMain" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
+                <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
             </div>
           </div>
         </div>
