--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 
 <script>
 
+window.addEventListener('scroll', () => { 
+  div = document.getElementById('featureMain-wrap');
+  div.style.background = "-webkit-linear-gradient(120deg, rgba(100, 225, 225, 0.3), white)";
+});
+
 const changeQuotes = () => {
 const json = {
   "quotes": [
@@ -191,64 +196,79 @@ function expandLittleNavbar() {
     <a href="https://get.webmr.io/windows"><i class="fab heroDL fa-windows fa-2x p-2"></i></a>
 </div>
 
-<div class="row whatIsExokit pt-4">
-  <div class="col-12 text-center whatIsExokitPusher" id="featureMain-wrap">
-      <h1>What is Exokit?</h1>
-      <h4 class="font-weight-light">Exokit is an XR engine that runs your code as native.</h4>
-      <div class="featurePusher"></div>
-      <div class="row pt-5">
-        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-          <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">Power up your WebXR app</h1>
-          <h5 class="featureText slideItem text-left font-weight-light p-3" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">
-            Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
-          <div class="featureTextPusher "></div>
+<div class="whatIsExokit pt-4" id="featureMain-wrap">
+
+  <div class="row">
+      <div class="col-12 text-center whatIsExokitPusher">
+          <h1 class="slideItem" data-animation="[{k: 'translateX', sp: 0.2, ep: 0.5, sv: -50, ev: 0, u: 'vw'}]">What is Exokit?</h1>
+          <h4 class="font-weight-light slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.6, sv: -50, ev: 0, u: 'vw'}]">
+            Exokit is an XR engine that runs your code as native.</h4>
+          <div class="featurePusher"></div>
           <div class="featureTextPusher"></div>
-          <div class="featureTextPusher "></div>
-          <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
-          <h5 class="featureText text-left font-weight-light p-3 slideItem"
-           data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">
-           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
-          <div class="featureTextPusher "></div>
-          <div class="featureTextPusher "></div>
-          <div class="featureTextPusher "></div>
-          <h2 class="featureText slideItem pb-4" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -100, ev: 0, u: 'vw'}]">Ship your app</h1>
-            <h5 class="featureText slideItem text-left font-weight-light p-3"
-             data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -400, ev: 0, u: 'vw'}]">
-             Get a package for Magic Leap World, Steam, and other app stores direct from URL or content Zip with Exoport.
-            </h5>
-          <div class="featureTextPusher "></div>
-          <div class="featureTextPusher "></div>
-        </div>
-        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pb-4">
-              <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
-              <h3 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 100, ev: 0, u: 'vw'}]">Javascript</h3>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pb-4">
-              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
-              <h3 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 90, ev: 0, u: 'vw'}]">HTML</h3>
-            </div>
+      </div>
+  </div>
+
+  <div class="row pt-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
+      <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.7, ep: 1, sv: -50, ev: 0, u: 'vw'}]">Power up your WebXR app</h2>
+      <h5 class="featureText slideItem text-left font-weight-light" data-animation="[{k: 'translateX', sp: 0.9, ep: 1, sv: -50, ev: 0, u: 'vw'}]">
+        Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
+      <div class="row">
+        <div class="col-6">
+            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.7, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
+            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.9, ep: 1, sv: 50, ev: 0, u: 'vw'}]">Javascript</h4>
           </div>
-          
-          <div class="featureArrow featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 300, ev: 0, u: 'vw'}]"></div>
-          <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
-          <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 90, ev: 0, u: 'vw'}]">Exokit</h3>
-          <div class="featureArrow featureMain slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 600, ev: 0, u: 'vw'}]"></div>
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 150, ev: 0, u: 'vw'}]"></img>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 100, ev: 0, u: 'vw'}]"></img>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
-            </div>
+          <div class="col-6">
+              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.7, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></i>
+              <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.9, ep: 1, sv: 50, ev: 0, u: 'vw'}]">HTML</h4>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="featureTextPusher"></div>
+
+  <div class="row pt-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
+        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.5, ep: 1, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light slideItem"
+          data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -50, ev: 0, u: 'vw'}]">
+          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
+      <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
+      <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 90, ev: 0, u: 'vw'}]">Exokit</h3>
+    </div>
+  </div>
+
+  <div class="featureTextPusher"></div>
+
+  <div class="row pt-5">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
+        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.5, ep: 1, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light slideItem"
+          data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: -50, ev: 0, u: 'vw'}]">
+          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mt-4">
+        <div class="row">
+          <div class="col-lg-4 text-center">
+            <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 150, ev: 0, u: 'vw'}]"></img>
+          </div>
+          <div class="col-lg-4 text-center">
+            <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 100, ev: 0, u: 'vw'}]"></img>
+          </div>
+          <div class="col-lg-4 text-center">
+            <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0, ep: 1, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
         </div>
       </div>
   </div>
+
+  <div class="featureTextPusher"></div>
+
 </div>
 
 <div class="row exokitFeatures pt-5">
@@ -258,6 +278,7 @@ function expandLittleNavbar() {
     <h4 class="font-weight-light pb-3">Exokit is an XR engine that runs your code as native.</h4>
   </div>
   <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 pb-4">
+      <div class="featuresSpacer"></div>
     <div class="col-12 exokitFeature">
       <img class="img-fluid mt-4 mb-3" src="media/window.png"></img>
       <h3>Not a Browser</h4>
