--- a/index.html
+++ b/index.html
@@ -68,9 +68,25 @@
 
 <script>
 
-window.addEventListener('scroll', () => { 
+window.addEventListener('scroll', () => {
   div = document.getElementById('featureMain-wrap');
-  div.style.background = "-webkit-linear-gradient(120deg, rgba(100, 225, 225, 0.3), white)";
+
+  let scrollY = window.scrollY;
+  let distanceTop = div.offsetTop - window.scrollY;
+  let factor = scrollY / distanceTop;
+  let red = Math.abs(225 / factor);
+  let green = Math.abs(20 / factor);
+  let blue = Math.abs(225 / factor);
+  let trans = Math.abs(factor * 1.4);
+
+  console.log("scrollY: ", scrollY, "distanceTop: ", distanceTop);
+  console.log("factor: ", factor);
+  console.log("rgba: ", red, green, blue, trans);
+
+  if(scrollY > distanceTop){
+    div.style.background = `-webkit-linear-gradient(120deg, rgba(${red}, ${green}, ${blue}, ${trans}), white)`;
+  }
+
 });
 
 const changeQuotes = () => {
@@ -199,7 +215,7 @@ function expandLittleNavbar() {
 <div class="whatIsExokit pt-4" id="featureMain-wrap">
 
   <div class="row">
-      <div class="col-12 text-center whatIsExokitPusher">
+      <div class="col-12 text-center whatIsExokitPusher" style="color: #212529">
           <h1 class="slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.2, sv: -50, ev: 0, u: 'vw'}]">What is Exokit?</h1>
           <h4 class="font-weight-light slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.22, sv: -60, ev: 0, u: 'vw'}]">
             Exokit is an XR engine that runs your code as native.</h4>
@@ -208,7 +224,7 @@ function expandLittleNavbar() {
       </div>
   </div>
 
-  <div class="row pt-5">
+  <div class="row pt-5" style="color: #212529">
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
       <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.38, sv: -50, ev: 0, u: 'vw'}]">Power up your WebXR app</h2>
       <h5 class="featureText slideItem text-left font-weight-light" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.38, sv: -50, ev: 0, u: 'vw'}]">
@@ -238,7 +254,7 @@ function expandLittleNavbar() {
           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
-      <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.5, sv: 50, ev: 0, u: 'vw'}]"></img>
+      <img class="exokitImg featureMain slideItem" src="media/logo-white.svg" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.5, sv: 50, ev: 0, u: 'vw'}]"></img>
       <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.52, sv: 50, ev: 0, u: 'vw'}]">Exokit</h3>
     </div>
   </div>
