--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 window.addEventListener('scroll', () => {
 
   rgba_JSON = {
-    0: { // bright pink
-      "red": 225,
-      "green": 20,
-      "blue": 225
+    0: { // blue
+      "red": 47,
+      "green": 134,
+      "blue": 222
     },
-    1: { // blue
-      "red": 20,
-      "green": 20,
-      "blue": 223
+    1: { // purple
+      "red": 142,
+      "green": 76,
+      "blue": 170
     },
     2: { //orange
       "red": 223,
@@ -98,20 +98,13 @@ window.addEventListener('scroll', () => {
 
   for(let i = 0; i < rgbaRows.length; i++){
     let scrollY = window.scrollY;
-    let distanceTop = rgbaRows[i].offsetTop - window.scrollY;
+    let distanceTop = parent.offsetTop - window.scrollY;
     let factor = scrollY / distanceTop;
-    let red = Math.abs(225 / factor);
-    let green = Math.abs(20 / factor);
-    let blue = Math.abs(225 / factor);
     let trans = Math.abs(factor * 0.1);
-
-    // console.log("scrollY: ", scrollY, "distanceTop: ", distanceTop);
-    // console.log("factor: ", factor);
-    // console.log("rgba: ", red, green, blue, trans);
 
     let rowOffset = rgbaRows[i].offsetTop - (rgbaRows[i].scrollTop + rgbaRows[i].clientTop);
 
-    if(scrollY > rowOffset){
+    if(scrollY > rowOffset * 1.2){
       parent.style.background = `-webkit-linear-gradient(120deg, rgba(
       ${rgba_JSON[i].red},
       ${rgba_JSON[i].green},
@@ -249,8 +242,8 @@ function expandLittleNavbar() {
 
   <div class="row rgbaRow">
       <div class="col-12 text-center whatIsExokitPusher" style="color: #212529">
-          <h1 class="slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.2, sv: -50, ev: 0, u: 'vw'}]">What is Exokit?</h1>
-          <h4 class="font-weight-light slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.22, sv: -60, ev: 0, u: 'vw'}]">
+          <h1 class="slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.13, sv: -50, ev: 0, u: 'vw'}]">What is Exokit?</h1>
+          <h4 class="font-weight-light slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.16, sv: -60, ev: 0, u: 'vw'}]">
             Exokit is an XR engine that runs your code as native.</h4>
           <div class="featurePusher"></div>
           <div class="featureTextPusher"></div>
@@ -262,19 +255,19 @@ function expandLittleNavbar() {
       <div class="featureTextPusher"></div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-      <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.38, sv: -50, ev: 0, u: 'vw'}]">Power up your WebXR app</h2>
-      <h5 class="featureText slideItem text-left font-weight-light" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.38, sv: -50, ev: 0, u: 'vw'}]">
+      <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.36, sv: -50, ev: 0, u: 'vw'}]">Power up your WebXR app</h2>
+      <h5 class="featureText slideItem text-left font-weight-light" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.35, sv: -50, ev: 0, u: 'vw'}]">
         Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
       <div class="row">
         <div class="col-6">
-            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.38, sv: 50, ev: 0, u: 'vw'}]"></i>
-            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.3, ep:  0.38, sv: 50, ev: 0, u: 'vw'}]">Javascript</h4>
+            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.20, ep: 0.38, sv: -150, ev: 0, u: 'vw'}]"></i>
+            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.22, ep:  0.38, sv: -150, ev: 0, u: 'vw'}]">Javascript</h4>
           </div>
           <div class="col-6">
-              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.38, sv: 50, ev: 0, u: 'vw'}]"></i>
-              <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.38, sv: 50, ev: 0, u: 'vw'}]">HTML</h4>
+              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.20, ep: 0.38, sv: -150, ev: 0, u: 'vw'}]"></i>
+              <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.22, ep: 0.38, sv: -150, ev: 0, u: 'vw'}]">HTML</h4>
           </div>
       </div>
     </div>
@@ -288,14 +281,14 @@ function expandLittleNavbar() {
       <div class="featureTextPusher"></div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.5, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
+        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.58, sv: 150, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
         <h5 class="featureText text-left font-weight-light slideItem"
-          data-animation="[{k: 'translateX', sp: 0.4, ep: 0.52, sv: -50, ev: 0, u: 'vw'}]">
+          data-animation="[{k: 'translateX', sp: 0.4, ep: 0.58, sv: 150, ev: 0, u: 'vw'}]">
           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
-      <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.5, sv: 50, ev: 0, u: 'vw'}]"></img>
-      <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.52, sv: 50, ev: 0, u: 'vw'}]">Exokit</h3>
+      <img class="exokitImg featureMain slideItem" src="media/logo-black.svg" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.58, sv: 100, ev: 0, u: 'vw'}]"></img>
+      <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.58, sv: 100, ev: 0, u: 'vw'}]">Exokit</h3>
     </div>
     <div class="col-12">
       <div class="featureTextPusher"></div>
@@ -307,21 +300,21 @@ function expandLittleNavbar() {
         <div class="featureTextPusher"></div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
+        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
         <h5 class="featureText text-left font-weight-light slideItem"
-          data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: -80, ev: 0, u: 'vw'}]">
+          data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: -80, ev: 0, u: 'vw'}]">
           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mt-4">
         <div class="row">
           <div class="col-lg-4 text-center">
-            <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
           <div class="col-lg-4 text-center">
-            <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0.50, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
           <div class="col-lg-4 text-center">
-            <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0.45, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
         </div>
       </div>
