basic frontend for new Features section

--- a/index.html
+++ b/index.html
@@ -279,42 +279,55 @@ function expandLittleNavbar() {
 </div>
 
 <div class="row exokitFeatures pt-5">
-    <div class="featuresSpacer"></div>
+  <div class="featuresSpacer"></div>
   <div class="col-12 text-center pt-5 pb-4">
     <h1 class="pt-5">Features</h1>
     <h4 class="font-weight-light pb-3">Exokit is an XR engine that runs your code as native.</h4>
   </div>
-  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 pb-4">
-      <div class="featuresSpacer"></div>
-    <div class="col-12 exokitFeature">
-      <img class="img-fluid mt-4 mb-3" src="media/window.png"></img>
-      <h3>Not a Browser</h4>
-      <h4 class="font-weight-light text-left p-4">Exokit is an XR engine, not a web browser. It's layers of web-powered realities, not screens floating in space.</h5>
+  <div class="row">
+    <div class="col-1">
     </div>
-  </div>
-  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 pb-4">
-    <div class="col-12 exokitFeature">
-        <img class="img-fluid mt-4 mb-3" src="media/satelite.png"></img>
-        <h4>Futuristic APIs</h4>
-        <h4 class="font-weight-light text-left p-4">DOM-to-canvas, 3D iframes, device emulation, scriptable bot framework. The future is already here.</h5>
+    <div class="col-1">
+      <h2>1/11</h2>
     </div>
-  </div>
-  <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 pb-4">
-    <div class="col-12 exokitFeature">
-        <img class="img-fluid mt-4 mb-3" src="media/Squares.png"></img>
-        <h4>Runs existing code</h4>
-        <h4 class="font-weight-light text-left p-4">Don't change your code. Exokit runs regular HTML, WebXR, and WebGL, and frameworks like A-Frame and THREE.js.</h5>
+    <div class="col-3">
+      <img class="img-fluid w-75" src="media/Squares.png"></img>
     </div>
-  </div>
-    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 pb-4">
-      <div class="col-12 exokitFeature">
-          <img class="img-fluid mt-4 mb-3" src="media/fork.png"></img>
-          <h4>Not a fork of</h4>
-          <h4>Firefox or Chrome</h4>
-          <h4 class="font-weight-light text-left p-4">Exokit is not a fork of Chrome, Firefox, or anything else. It's fresh open source optimized for XR, by folks who live and breathe it.</h5>
+    <div class="col-3">
+      <h2>Not a Browser</h2>
+      <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
+      <div class="row mt-4 featureArrows">
+        <div class="col-6">
+          <i class="fas fa-arrow-left fa-2x quoteArrow"></i>  
+        </div>
+        <div class="col-6">
+          <i class="fas fa-arrow-right fa-2x quoteArrow"></i>
+        </div>
       </div>
-      <div class="featuresSpacer"></div>
     </div>
+    <div class="col-2">
+      <div class="row">
+        <div class="col-2">
+          <div class="vLine mr-5"></div>
+        </div>
+        <div class="col-10" style="height: 30vh; overflow-y: scroll; overflow: auto;">
+          <h5>Runs Existing Code</h5>
+          <h5>Native Javascript</h5>
+          <h5>Hardware Bindings</h5>
+          <h5>Made in Javascript</h5>
+          <h5>Multithreading Reailty Tabs</h5>
+          <h5>Futuristic APIs</h5>
+          <h5>Speed Past Legacy</h5>
+          <h5>Not a Fork</h5>
+          <h5>Cross Platform</h5>
+          <h5>Package for Stores</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-1">
+
+    </div>
+  </div>
 </div>
 
 <div class="row madeWithExokit mt-5">
