--- a/index.html
+++ b/index.html
@@ -183,12 +183,15 @@ window.addEventListener('scroll', () => {
 
   const distanceFromTop = (parent.offsetTop - window.scrollY);
 
+  const counter = document.getElementById('featuresCounter');
+
   if(distanceFromTop <= 0){
       console.log('scroll reached bottom');
       parent.style.position = "fixed";
-      parent.style.top = "0";
+      parent.style.top = "25";
       parent.style.zIndex = "10"
-
+      let currCount = Number(counter.innerHTML);
+      counter.innerHTML = currCount + 1;
       // TO-DO: disable body scrolling, scroll through divs inside the parent, unlock the fixed postion and return to relative when complete
   }
 
@@ -304,22 +307,32 @@ window.addEventListener('scroll', () => {
     <div class="col-1">
     </div>
     <div class="col-1">
-      <h2>1/11</h2>
+      <h2><span id="featuresCounter">1</span>/11</h2>
     </div>
-    <div class="col-3">
-      <img class="img-fluid w-75" src="media/Squares.png"></img>
+    <div class="col-3" style="height: 30vh; overflow-y: scroll; overflow: auto;">
+      <img class="img-fluid w-50" src="media/window.png"></img>
+      <div style="height: 20vh"></div>
+      <img class="img-fluid w-50" src="media/fork.png"></img>
+      <div style="height: 20vh"></div>
+      <img class="img-fluid w-50" src="media/satelite.png"></img>
+      <div style="height: 20vh"></div>
+      <img class="img-fluid w-50" src="media/Squares.png"></img>
     </div>
-    <div class="col-3">
+    <div class="col-3" style="height: 20vh; overflow-y: scroll; overflow: auto;">
       <h2>Not a Browser</h2>
       <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
-      <div class="row mt-4 featureArrows">
-        <div class="col-6">
-          <i class="fas fa-arrow-left fa-2x quoteArrow"></i>  
-        </div>
-        <div class="col-6">
-          <i class="fas fa-arrow-right fa-2x quoteArrow"></i>
-        </div>
-      </div>
+      <div style="height: 10vh"></div>
+      <h2>Runs Existing Code</h2>
+      <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
+      <div style="height: 10vh"></div>
+      <h2>Hardware Bindings</h2>
+      <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
+      <div style="height: 10vh"></div>
+      <h2>Made in Javascript</h2>
+      <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
+      <div style="height: 10vh"></div>
+      <h2>Multithreading Reailty Tabs</h2>
+      <h4 class="font-weight-light">Exokit is an XR engine, not a web browser. It's layers of web-powererd realities, not screens floating in space.</h4>
     </div>
     <div class="col-2">
       <div class="row">
@@ -328,14 +341,23 @@ window.addEventListener('scroll', () => {
         </div>
         <div class="col-10" style="height: 20vh; overflow-y: scroll; overflow: auto;">
           <h5>Runs Existing Code</h5>
+          <br>
           <h5>Native Javascript</h5>
+          <br>
           <h5>Hardware Bindings</h5>
+          <br>
           <h5>Made in Javascript</h5>
+          <br>
           <h5>Multithreading Reailty Tabs</h5>
+          <br>
           <h5>Futuristic APIs</h5>
+          <br>
           <h5>Speed Past Legacy</h5>
+          <br>
           <h5>Not a Fork</h5>
+          <br>
           <h5>Cross Platform</h5>
+          <br>
           <h5>Package for Stores</h5>
         </div>
       </div>
